# ContactBench

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  setup.py
bindings/: CMakeLists.txt  contactbench.cc  contactbench.hh  context-cppad.hh  context.hh
bindings/pycontact/: __init__.py  inverse_dynamics.py  simulators.py  solvers.py
bindings/pycontact/jax/: solvers.py
bindings/pycontact/torch/: __init__.py  solvers.py
bindings/pycontact/utils/: __init__.py  bench.py  callbacks.py  pin_utils.py
examples/: 2cubes.py  ball.py  cube.py  hand.py  humanoid.py  solo.py  solve_ncp.py  ur5.py
examples/utils/: models.py  visualize.py
include/contactbench/: contact-problem.hpp  contact-problem.hxx  contact-problem.txx  context.hpp  delassus-wrapper.hpp  delassus-wrapper.hxx  delassus-wrapper.txx  friction-constraint.hpp  friction-constraint.hxx  fwd.hpp  helpers.hpp  macros.hpp  math.hpp  solvers.hpp  solvers.hxx  solvers.txx
include/contactbench/bindings/: context.hh
src/: contact-problem.cpp  delassus-wrapper.cpp  solvers.cpp
tests/: CMakeLists.txt  contact-problem.cpp  delassus.cpp  friction-constraints.cpp  solvers-derivatives.cpp  solvers.cpp
tests/autodiff/: CMakeLists.txt  contact-problem-cppad.cpp  delassus-cppad.cpp  friction-constraints-cppad.cpp  solvers-cppad.cpp
tests/python/: test_collisions.py  test_contact_problem.py  test_delassus_wrapper.py  test_friction_constraint.py  test_jax_solvers.py  test_pytorch_solvers.py  test_solvers.py  test_solvers_grad.py
tests/python/data/: 2cubes_t0.npz  sliding_cube.npz
